--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         <a class="top" href="#">Back to Top</a>
           <ul class="footer-nav">
             <li class=""><a href="#">Home</a></li>
-            <li class=""><a href="#">Portfolio</a></li>
-            <li class=""><a href="#">Contact</a></li>
+            <li class=""><a href="#portfolio">Portfolio</a></li>
+            <li class=""><a href="#contact">Contact</a></li>
           </ul>
       </div>
 
