--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="main-nav">
       <h1 class="name">Jordan Bradley</h1>
         <ul class="nav">
-          <li class=""><a href="#">Home</a></li>
+          <li class=""><a href="#top">Home</a></li>
           <li class=""><a href="#portfolio">Portfolio</a></li>
           <li class=""><a href="#contact">Contact</a></li>
         </ul>
@@ -72,9 +72,9 @@
       <!-- Bottom portion of footer with navigation -->
       <div class="bottom-footer">
         <p class="name2">Jordan Bradley</p>
-        <a class="top" href="#">Back to Top</a>
+        <a class="top" href="#top">Back to Top</a>
           <ul class="footer-nav">
-            <li class=""><a href="#">Home</a></li>
+            <li class=""><a href="#top">Home</a></li>
             <li class=""><a href="#portfolio">Portfolio</a></li>
             <li class=""><a href="#contact">Contact</a></li>
           </ul>
